# distributed-replicated-caching-splinterdb

./: .clang-format  .dockerignore  .gitmodules  CMakeLists.txt  Dockerfile.dev  Dockerfile.run  Makefile  README.md  client.sh  restart_server.sh  run_server.sh  setup_client.sh  setup_server.sh  start_servers.sh
apps/: CMakeLists.txt  cli.cpp  client.cpp  raft.cpp  raft.cxx  spl_client.cpp  spl_server.cpp  splinterdb.cpp
docker/: CMakeLists.txt  build  build-dev  start_servers
include/: calc_server.cxx  calc_state_machine.hxx  example_common.hxx  in_memory_log_store.h  in_memory_log_store.hxx  in_memory_state_mgr.hxx  log_level.h  logger.h  logger_wrapper.hxx  owned_slice.h  replica.h  replica_config.h  result.h  splinterdb_connector.h  splinterdb_log_store.h  splinterdb_operation.h  splinterdb_state_machine.h  splinterdb_wrapper.h  timer.h
include/client/: client.h  read_policy.h
include/common/: result.h  rpc.h  timer.h  types.h
include/logging/: backtrace.h  logger.h
include/server/: owned_slice.h  replica.h  replica_config.h  server.h  splinterdb_operation.h  splinterdb_wrapper.h
scripts/: raft.sh
src/: CMakeLists.txt  in_memory_log_store.cpp  in_memory_log_store.cxx  in_memory_state_mgr.hxx  logger.cc  logger.h  owned_slice.cpp  replica.cpp  server.cpp  splinterdb_log_store.cpp  splinterdb_log_store.h  splinterdb_operation.cpp  splinterdb_snapshot.h  splinterdb_state_machine.cpp  splinterdb_state_machine.h
src/client/: CMakeLists.txt  client.cpp
src/common/: types.cpp
src/logging/: logger.cpp
src/server/: CMakeLists.txt  in_memory_log_store.cpp  in_memory_state_mgr.hxx  logger.cpp  logger.h  owned_slice.cpp  replica.cpp  server.cpp  splinterdb_log_store.cpp  splinterdb_log_store.h  splinterdb_operation.cpp  splinterdb_state_machine.cpp  splinterdb_state_machine.h
